--- a/internal/projects/bulleit/Stamped/CreateStampViewController.xib
+++ b/internal/projects/bulleit/Stamped/CreateStampViewController.xib
@@ -18,7 +18,6 @@
 			<string>IBProxyObject</string>
 			<string>IBUIActivityIndicatorView</string>
 			<string>IBUITextView</string>
-			<string>IBUINavigationBar</string>
 			<string>IBUIScrollView</string>
 			<string>IBUIButton</string>
 		</object>
@@ -405,7 +404,7 @@
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 							</object>
 						</object>
-						<string key="NSFrame">{{0, 44}, {320, 416}}</string>
+						<string key="NSFrameSize">{320, 416}</string>
 						<reference key="NSSuperview" ref="191373211"/>
 						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="555494954"/>
@@ -416,8 +415,8 @@
 					</object>
 					<object class="IBUIView" id="851464612">
 						<reference key="NSNextResponder" ref="191373211"/>
-						<int key="NSvFlags">301</int>
-						<string key="NSFrame">{{0, 411}, {320, 49}}</string>
+						<int key="NSvFlags">269</int>
+						<string key="NSFrame">{{0, 367}, {320, 49}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
 						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="925463886"/>
@@ -427,8 +426,8 @@
 					</object>
 					<object class="IBUIButton" id="925463886">
 						<reference key="NSNextResponder" ref="191373211"/>
-						<int key="NSvFlags">292</int>
-						<string key="NSFrame">{{85, 411}, {55, 49}}</string>
+						<int key="NSvFlags">268</int>
+						<string key="NSFrame">{{85, 367}, {55, 49}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
 						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="20863377"/>
@@ -463,8 +462,8 @@
 					</object>
 					<object class="IBUIButton" id="573052172">
 						<reference key="NSNextResponder" ref="191373211"/>
-						<int key="NSvFlags">292</int>
-						<string key="NSFrame">{{181, 411}, {55, 49}}</string>
+						<int key="NSvFlags">268</int>
+						<string key="NSFrame">{{181, 367}, {55, 49}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
 						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView"/>
@@ -489,8 +488,8 @@
 					</object>
 					<object class="IBUIActivityIndicatorView" id="20863377">
 						<reference key="NSNextResponder" ref="191373211"/>
-						<int key="NSvFlags">-2147483356</int>
-						<string key="NSFrame">{{150, 424}, {20, 20}}</string>
+						<int key="NSvFlags">-2147483380</int>
+						<string key="NSFrame">{{150, 380}, {20, 20}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
 						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="573052172"/>
@@ -499,89 +498,11 @@
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 						<int key="IBUIStyle">2</int>
 					</object>
-					<object class="IBUIView" id="789233525">
-						<reference key="NSNextResponder" ref="191373211"/>
-						<int key="NSvFlags">292</int>
-						<object class="NSMutableArray" key="NSSubviews">
-							<bool key="EncodedWithXMLCoder">YES</bool>
-							<object class="IBUINavigationBar" id="942003248">
-								<reference key="NSNextResponder" ref="789233525"/>
-								<int key="NSvFlags">290</int>
-								<string key="NSFrameSize">{320, 44}</string>
-								<reference key="NSSuperview" ref="789233525"/>
-								<reference key="NSWindow"/>
-								<reference key="NSNextKeyView" ref="455191509"/>
-								<string key="NSReuseIdentifierKey">_NS:74</string>
-								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
-								<int key="IBUIBarStyle">1</int>
-								<object class="NSArray" key="IBUIItems" id="0">
-									<bool key="EncodedWithXMLCoder">YES</bool>
-								</object>
-							</object>
-							<object class="IBUIButton" id="455191509">
-								<reference key="NSNextResponder" ref="789233525"/>
-								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{5, 6}, {55, 31}}</string>
-								<reference key="NSSuperview" ref="789233525"/>
-								<reference key="NSWindow"/>
-								<reference key="NSNextKeyView" ref="937420720"/>
-								<string key="NSReuseIdentifierKey">_NS:196</string>
-								<bool key="IBUIOpaque">NO</bool>
-								<int key="IBUIContentMode">2</int>
-								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
-								<int key="IBUIContentHorizontalAlignment">0</int>
-								<int key="IBUIContentVerticalAlignment">0</int>
-								<reference key="IBUIHighlightedTitleColor" ref="935530847"/>
-								<object class="NSColor" key="IBUINormalTitleColor">
-									<int key="NSColorSpace">1</int>
-									<bytes key="NSRGB">MC4xOTYwNzg0MzQ2IDAuMzA5ODAzOTMyOSAwLjUyMTU2ODY1NgA</bytes>
-								</object>
-								<reference key="IBUINormalTitleShadowColor" ref="5386939"/>
-								<object class="NSCustomResource" key="IBUIHighlightedImage">
-									<string key="NSClassName">NSImage</string>
-									<string key="NSResourceName">back_button_pressed@2x.png</string>
-								</object>
-								<object class="NSCustomResource" key="IBUINormalImage">
-									<string key="NSClassName">NSImage</string>
-									<string key="NSResourceName">back_button@2x.png</string>
-								</object>
-								<reference key="IBUIFontDescription" ref="437072215"/>
-								<reference key="IBUIFont" ref="697827049"/>
-							</object>
-							<object class="IBUIImageView" id="937420720">
-								<reference key="NSNextResponder" ref="789233525"/>
-								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{105, 13}, {109, 19}}</string>
-								<reference key="NSSuperview" ref="789233525"/>
-								<reference key="NSWindow"/>
-								<reference key="NSNextKeyView" ref="870662028"/>
-								<string key="NSReuseIdentifierKey">_NS:363</string>
-								<int key="IBUIContentMode">1</int>
-								<bool key="IBUIUserInteractionEnabled">NO</bool>
-								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
-								<object class="NSCustomResource" key="IBUIImage">
-									<string key="NSClassName">NSImage</string>
-									<string key="NSResourceName">new_stamp_copy@2x.png</string>
-								</object>
-							</object>
-						</object>
-						<string key="NSFrameSize">{320, 44}</string>
-						<reference key="NSSuperview" ref="191373211"/>
-						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="942003248"/>
-						<string key="NSReuseIdentifierKey">_NS:49</string>
-						<object class="NSColor" key="IBUIBackgroundColor">
-							<int key="NSColorSpace">3</int>
-							<bytes key="NSWhite">MQA</bytes>
-							<reference key="NSCustomColorSpace" ref="614199035"/>
-						</object>
-						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
-					</object>
 				</object>
-				<string key="NSFrame">{{0, 20}, {320, 460}}</string>
+				<string key="NSFrame">{{0, 64}, {320, 416}}</string>
 				<reference key="NSSuperview"/>
 				<reference key="NSWindow"/>
-				<reference key="NSNextKeyView" ref="789233525"/>
+				<reference key="NSNextKeyView" ref="870662028"/>
 				<object class="NSColor" key="IBUIBackgroundColor">
 					<int key="NSColorSpace">3</int>
 					<bytes key="NSWhite">MQA</bytes>
@@ -589,6 +510,10 @@
 				</object>
 				<object class="IBUISimulatedStatusBarMetrics" key="IBUISimulatedStatusBarMetrics">
 					<int key="IBUIStatusBarStyle">2</int>
+				</object>
+				<object class="IBUISimulatedNavigationBarMetrics" key="IBUISimulatedTopBarMetrics">
+					<int key="IBUIBarStyle">1</int>
+					<bool key="IBUIPrompted">NO</bool>
 				</object>
 				<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 			</object>
@@ -627,14 +552,6 @@
 						<reference key="destination" ref="9764505"/>
 					</object>
 					<int key="connectionID">15</int>
-				</object>
-				<object class="IBConnectionRecord">
-					<object class="IBCocoaTouchOutletConnection" key="connection">
-						<string key="label">navigationBar</string>
-						<reference key="source" ref="372490531"/>
-						<reference key="destination" ref="942003248"/>
-					</object>
-					<int key="connectionID">18</int>
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchOutletConnection" key="connection">
@@ -687,15 +604,6 @@
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchEventConnection" key="connection">
 						<string key="label">backOrCancelButtonPressed:</string>
-						<reference key="source" ref="455191509"/>
-						<reference key="destination" ref="372490531"/>
-						<int key="IBEventType">7</int>
-					</object>
-					<int key="connectionID">85</int>
-				</object>
-				<object class="IBConnectionRecord">
-					<object class="IBCocoaTouchEventConnection" key="connection">
-						<string key="label">backOrCancelButtonPressed:</string>
 						<reference key="source" ref="925463886"/>
 						<reference key="destination" ref="372490531"/>
 						<int key="IBEventType">7</int>
@@ -729,14 +637,6 @@
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchOutletConnection" key="connection">
-						<string key="label">navBarContainer</string>
-						<reference key="source" ref="372490531"/>
-						<reference key="destination" ref="789233525"/>
-					</object>
-					<int key="connectionID">93</int>
-				</object>
-				<object class="IBConnectionRecord">
-					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">cancelButton</string>
 						<reference key="source" ref="372490531"/>
 						<reference key="destination" ref="925463886"/>
@@ -759,21 +659,15 @@
 					</object>
 					<int key="connectionID">98</int>
 				</object>
-				<object class="IBConnectionRecord">
-					<object class="IBCocoaTouchOutletConnection" key="connection">
-						<string key="label">navBarBackButton</string>
-						<reference key="source" ref="372490531"/>
-						<reference key="destination" ref="455191509"/>
-					</object>
-					<int key="connectionID">99</int>
-				</object>
 			</object>
 			<object class="IBMutableOrderedSet" key="objectRecords">
 				<object class="NSArray" key="orderedObjects">
 					<bool key="EncodedWithXMLCoder">YES</bool>
 					<object class="IBObjectRecord">
 						<int key="objectID">0</int>
-						<reference key="object" ref="0"/>
+						<object class="NSArray" key="object" id="0">
+							<bool key="EncodedWithXMLCoder">YES</bool>
+						</object>
 						<reference key="children" ref="1000"/>
 						<nil key="parent"/>
 					</object>
@@ -786,7 +680,6 @@
 							<reference ref="925463886"/>
 							<reference ref="573052172"/>
 							<reference ref="870662028"/>
-							<reference ref="789233525"/>
 							<reference ref="20863377"/>
 						</object>
 						<reference key="parent" ref="0"/>
@@ -971,35 +864,6 @@
 						<string key="objectName">Shelf Background</string>
 					</object>
 					<object class="IBObjectRecord">
-						<int key="objectID">91</int>
-						<reference key="object" ref="789233525"/>
-						<object class="NSMutableArray" key="children">
-							<bool key="EncodedWithXMLCoder">YES</bool>
-							<reference ref="942003248"/>
-							<reference ref="455191509"/>
-							<reference ref="937420720"/>
-						</object>
-						<reference key="parent" ref="191373211"/>
-						<string key="objectName">NavBarContainer</string>
-					</object>
-					<object class="IBObjectRecord">
-						<int key="objectID">11</int>
-						<reference key="object" ref="942003248"/>
-						<reference key="parent" ref="789233525"/>
-					</object>
-					<object class="IBObjectRecord">
-						<int key="objectID">20</int>
-						<reference key="object" ref="455191509"/>
-						<reference key="parent" ref="789233525"/>
-						<string key="objectName">Back Button</string>
-					</object>
-					<object class="IBObjectRecord">
-						<int key="objectID">19</int>
-						<reference key="object" ref="937420720"/>
-						<reference key="parent" ref="789233525"/>
-						<string key="objectName">New Stamp Image View</string>
-					</object>
-					<object class="IBObjectRecord">
 						<int key="objectID">96</int>
 						<reference key="object" ref="20863377"/>
 						<reference key="parent" ref="191373211"/>
@@ -1016,11 +880,6 @@
 					<string>-2.IBPluginDependency</string>
 					<string>1.IBPluginDependency</string>
 					<string>10.IBPluginDependency</string>
-					<string>11.CustomClassName</string>
-					<string>11.IBPluginDependency</string>
-					<string>19.IBPluginDependency</string>
-					<string>20.IBPluginDependency</string>
-					<string>20.IBUIButtonInspectorSelectedStateConfigurationMetadataKey</string>
 					<string>36.IBPluginDependency</string>
 					<string>36.IBUserGuides</string>
 					<string>37.IBPluginDependency</string>
@@ -1045,22 +904,16 @@
 					<string>81.IBPluginDependency</string>
 					<string>83.IBPluginDependency</string>
 					<string>9.IBPluginDependency</string>
-					<string>91.IBPluginDependency</string>
 					<string>96.IBPluginDependency</string>
 				</object>
 				<object class="NSMutableArray" key="dict.values">
 					<bool key="EncodedWithXMLCoder">YES</bool>
-					<string>CreateStampDetailViewController</string>
+					<string>CreateStampViewController</string>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 					<string>UIResponder</string>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
-					<string>STNavigationBar</string>
-					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
-					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
-					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
-					<real value="1"/>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 					<object class="NSMutableArray">
 						<bool key="EncodedWithXMLCoder">YES</bool>
@@ -1072,7 +925,6 @@
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 					<string>UserImageView</string>
-					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
@@ -1109,7 +961,7 @@
 			<object class="NSMutableArray" key="referencedPartialClassDescriptions">
 				<bool key="EncodedWithXMLCoder">YES</bool>
 				<object class="IBPartialClassDescription">
-					<string key="className">CreateStampDetailViewController</string>
+					<string key="className">CreateStampViewController</string>
 					<string key="superclassName">UIViewController</string>
 					<object class="NSMutableDictionary" key="actions">
 						<bool key="EncodedWithXMLCoder">YES</bool>
@@ -1152,9 +1004,6 @@
 							<string>categoryImageView</string>
 							<string>checkmarkButton</string>
 							<string>detailLabel</string>
-							<string>navBarBackButton</string>
-							<string>navBarContainer</string>
-							<string>navigationBar</string>
 							<string>reasoningLabel</string>
 							<string>reasoningTextView</string>
 							<string>ribbonedContainerView</string>
@@ -1171,9 +1020,6 @@
 							<string>UIImageView</string>
 							<string>UIButton</string>
 							<string>UILabel</string>
-							<string>UIButton</string>
-							<string>UIView</string>
-							<string>STNavigationBar</string>
 							<string>UILabel</string>
 							<string>UITextView</string>
 							<string>UIView</string>
@@ -1193,9 +1039,6 @@
 							<string>categoryImageView</string>
 							<string>checkmarkButton</string>
 							<string>detailLabel</string>
-							<string>navBarBackButton</string>
-							<string>navBarContainer</string>
-							<string>navigationBar</string>
 							<string>reasoningLabel</string>
 							<string>reasoningTextView</string>
 							<string>ribbonedContainerView</string>
@@ -1226,18 +1069,6 @@
 							<object class="IBToOneOutletInfo">
 								<string key="name">detailLabel</string>
 								<string key="candidateClassName">UILabel</string>
-							</object>
-							<object class="IBToOneOutletInfo">
-								<string key="name">navBarBackButton</string>
-								<string key="candidateClassName">UIButton</string>
-							</object>
-							<object class="IBToOneOutletInfo">
-								<string key="name">navBarContainer</string>
-								<string key="candidateClassName">UIView</string>
-							</object>
-							<object class="IBToOneOutletInfo">
-								<string key="name">navigationBar</string>
-								<string key="candidateClassName">STNavigationBar</string>
 							</object>
 							<object class="IBToOneOutletInfo">
 								<string key="name">reasoningLabel</string>
@@ -1275,15 +1106,7 @@
 					</object>
 					<object class="IBClassDescriptionSource" key="sourceIdentifier">
 						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/CreateStampDetailViewController.h</string>
-					</object>
-				</object>
-				<object class="IBPartialClassDescription">
-					<string key="className">STNavigationBar</string>
-					<string key="superclassName">UINavigationBar</string>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/STNavigationBar.h</string>
+						<string key="minorKey">./Classes/CreateStampViewController.h</string>
 					</object>
 				</object>
 				<object class="IBPartialClassDescription">
@@ -1308,10 +1131,7 @@
 			<bool key="EncodedWithXMLCoder">YES</bool>
 			<object class="NSArray" key="dict.sortedKeys">
 				<bool key="EncodedWithXMLCoder">YES</bool>
-				<string>back_button@2x.png</string>
-				<string>back_button_pressed@2x.png</string>
 				<string>credit_icon@2x.png</string>
-				<string>new_stamp_copy@2x.png</string>
 				<string>photo_icon@2x.png</string>
 				<string>shelf_background.png</string>
 				<string>stamp_detail_ripple_bottom</string>
@@ -1321,10 +1141,7 @@
 			</object>
 			<object class="NSMutableArray" key="dict.values">
 				<bool key="EncodedWithXMLCoder">YES</bool>
-				<string>{110, 61}</string>
-				<string>{110, 61}</string>
 				<string>{30, 20}</string>
-				<string>{217, 38}</string>
 				<string>{27, 22}</string>
 				<string>{320, 240}</string>
 				<string>{16, 16}</string>
