--- a/internal/projects/bulleit/Stamped/en.lproj/MainWindow.xib
+++ b/internal/projects/bulleit/Stamped/en.lproj/MainWindow.xib
@@ -3,12 +3,12 @@
 	<data>
 		<int key="IBDocument.SystemTarget">1280</int>
 		<string key="IBDocument.SystemVersion">11A511</string>
-		<string key="IBDocument.InterfaceBuilderVersion">1900</string>
+		<string key="IBDocument.InterfaceBuilderVersion">1617</string>
 		<string key="IBDocument.AppKitVersion">1138</string>
 		<string key="IBDocument.HIToolboxVersion">566.00</string>
 		<object class="NSMutableDictionary" key="IBDocument.PluginVersions">
 			<string key="NS.key.0">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
-			<string key="NS.object.0">894</string>
+			<string key="NS.object.0">534</string>
 		</object>
 		<array key="IBDocument.IntegratedClassDependencies">
 			<string>IBProxyObject</string>
@@ -22,10 +22,7 @@
 		<array key="IBDocument.PluginDependencies">
 			<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 		</array>
-		<object class="NSMutableDictionary" key="IBDocument.Metadata">
-			<string key="NS.key.0">PluginDependencyRecalculationVersion</string>
-			<integer value="1" key="NS.object.0"/>
-		</object>
+		<dictionary class="NSMutableDictionary" key="IBDocument.Metadata"/>
 		<array class="NSMutableArray" key="IBDocument.RootObjects" id="1000">
 			<object class="IBProxyObject" id="841351856">
 				<string key="IBProxiedObjectIdentifier">IBFilesOwner</string>
@@ -224,9 +221,9 @@
 					</object>
 					<dictionary class="NSMutableDictionary" key="outlets">
 						<string key="activityTabBarItem">UITabBarItem</string>
-						<string key="addStampButton">UIButton</string>
 						<string key="mustDoTabBarItem">UITabBarItem</string>
 						<string key="peopleTabBarItem">UITabBarItem</string>
+						<string key="searchStampsNavigationController">UINavigationController</string>
 						<string key="stampsTabBarItem">UITabBarItem</string>
 						<string key="tabBar">UITabBar</string>
 					</dictionary>
@@ -235,10 +232,6 @@
 							<string key="name">activityTabBarItem</string>
 							<string key="candidateClassName">UITabBarItem</string>
 						</object>
-						<object class="IBToOneOutletInfo" key="addStampButton">
-							<string key="name">addStampButton</string>
-							<string key="candidateClassName">UIButton</string>
-						</object>
 						<object class="IBToOneOutletInfo" key="mustDoTabBarItem">
 							<string key="name">mustDoTabBarItem</string>
 							<string key="candidateClassName">UITabBarItem</string>
@@ -246,6 +239,10 @@
 						<object class="IBToOneOutletInfo" key="peopleTabBarItem">
 							<string key="name">peopleTabBarItem</string>
 							<string key="candidateClassName">UITabBarItem</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="searchStampsNavigationController">
+							<string key="name">searchStampsNavigationController</string>
+							<string key="candidateClassName">UINavigationController</string>
 						</object>
 						<object class="IBToOneOutletInfo" key="stampsTabBarItem">
 							<string key="name">stampsTabBarItem</string>
@@ -305,6 +302,6 @@
 		</object>
 		<bool key="IBDocument.PluginDeclaredDependenciesTrackSystemTargetVersion">YES</bool>
 		<int key="IBDocument.defaultPropertyAccessControl">3</int>
-		<string key="IBCocoaTouchPluginVersion">894</string>
+		<string key="IBCocoaTouchPluginVersion">534</string>
 	</data>
 </archive>
